<resources>
    <string name="app_name">DataBaseDemo</string>
    <string name="add_a_new_employee">Add a New Employee</string>
    <string name="select_department">Select Department</string>
    <string name="enter_employee_salary">Enter employee salary</string>
    <string name="add_employee">Add Employee</string>
    <string name="view_employees">View Employees</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_employee">Edit Employee</string>
    <string name="update_employee">Update employee</string>

    <array name="departments">
        <item>Technical</item>
        <item>Support</item>
        <item>Research And development</item>
        <item>Marketing</item>
        <item>Human Resources</item>
    </array>


</resources>
